[package]
name = "qwarves"
version = "0.1.0"
authors = ["jorisdevries <jorisdvries@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = { version = "0.3.10", default-features = false, features = ["fonts", "saving"]}
rand="0.7.3"
specs = "0.16.1"
specs-derive = "0.4.0"
